--- a/rgdsn.ipynb
+++ b/rgdsn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dd781740ae26b2edb4d45ca88cb02eefbd39dd99811b15af78e8fed32bde0575"
+  "signature": "sha256:66d190f2d88d7e5bc78f6af334f63ab05c88c7f032cddc23d3289aa7d7e45f2e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -399,6 +399,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "t3_2oeo0c\n",
+        "My daughter and her sleeping cousin. Draw their first meeting?!\n",
+        "http://imgur.com/dMA1Ns3\n",
+        "babydaisy611\n",
+        "None\n",
+        "0\n",
+        "[]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "t3_2oelz3\n",
         "My Son's first ever baseball game with Daddy.\n",
         "http://imgur.com/ndXEDmE\n",
@@ -503,7 +517,7 @@
         "blasejade\n",
         "None\n",
         "0\n",
-        "[]"
+        "[<praw.objects.Comment object at 0x16343f0>]"
        ]
       },
       {
@@ -517,7 +531,7 @@
         "jazzillaa\n",
         "None\n",
         "0\n",
-        "[]"
+        "[<praw.objects.Comment object at 0x164d9b0>]"
        ]
       },
       {
@@ -545,7 +559,7 @@
         "Sarahbelle89\n",
         "None\n",
         "0\n",
-        "[]"
+        "[<praw.objects.Comment object at 0x1634310>, <praw.objects.Comment object at 0x16344f0>]"
        ]
       },
       {
@@ -671,7 +685,7 @@
         "tjej\n",
         "None\n",
         "0\n",
-        "[]"
+        "[<praw.objects.Comment object at 0x14f70d0>]"
        ]
       },
       {
@@ -734,25 +748,35 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "t3_2odir1\n",
-        "My little sister (glasses) and her wife on their wedding day. Same-sex marriage was finally legalized in our home state!\n",
-        "http://imgur.com/khvU7zu\n",
-        "oatmeal_pie\n",
-        "None\n",
-        "0\n",
-        "[]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
         "\n"
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 193
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "decict"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 194,
+       "text": [
+        "{'downs': 0,\n",
+        " 'example': 'wcmckee',\n",
+        " 'title': u'Anyone want to draw Paula Scholes and I? Thanks!',\n",
+        " 'ups': 1,\n",
+        " 'url': u'http://imgur.com/9HWg1ua'}"
+       ]
+      }
+     ],
+     "prompt_number": 194
     },
     {
      "cell_type": "code",
@@ -1513,6 +1537,26 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 134
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "doc.render()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 198,
+       "text": [
+        "u'<!DOCTYPE html>\\n<html>\\n  <head>\\n    <title>RedditGetsDrawn Recent Reference</title>\\n    <link href=\"style.css\" rel=\"stylesheet\"><script src=\"script.js\" type=\"text/javascript\"></script>\\n    <div class=\"header\">\\n      <h1>RedditGetsDrawn Recent Reference</h1>\\n      <p>updated Fri, 05 Dec 2014 22:35:20 +0000</p>\\n    </div>\\n  </head>\\n  <body>\\n    <div id=\"body\">\\n      <ol>\\n        <h1>My Son\\'s first ever baseball game with Daddy.</h1>\\n        <a>http://imgur.com/ndXEDmE</a>\\n        <p>\\n          <img src=\"http://imgur.com/ndXEDmE\">\\n        </p>\\n        <p>LiamsDaddy</p>\\n        <h1>Please, draw myself and my girlfriend. Selfie at the beach! Any styles welcome, thanks so much! ;)</h1>\\n        <a>http://imgur.com/9nplYrE</a>\\n        <p>\\n          <img src=\"http://imgur.com/9nplYrE\">\\n        </p>\\n        <p>jpesmeraldo</p>\\n        <h1>My daughter from a fun little photo project we did together :)</h1>\\n        <a>http://imgur.com/7Q7rjdC</a>\\n        <p>\\n          <img src=\"http://imgur.com/7Q7rjdC\">\\n        </p>\\n        <p>Lileaspirals</p>\\n        <h1>Me and my beautiful wife on the happiest day of my life</h1>\\n        <a>http://imgur.com/3uQgoyL</a>\\n        <p>\\n          <img src=\"http://imgur.com/3uQgoyL\">\\n        </p>\\n        <p>TylerMills</p>\\n        <h1>Anyone want draw my (hopefully) soon to be fiancee from her favorite picture?</h1>\\n        <a>http://imgur.com/a/fnKuP</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/fnKuP\">\\n        </p>\\n        <p>sirwes</p>\\n        <h1>Please draw me and my soon to be SO as a surprise for him please?</h1>\\n        <a>http://imgur.com/a/x5gWO</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/x5gWO\">\\n        </p>\\n        <p>fletchdoll</p>\\n        <h1>Would love a fun picture of my little boy please.</h1>\\n        <a>http://imgur.com/M2LjhZ8</a>\\n        <p>\\n          <img src=\"http://imgur.com/M2LjhZ8\">\\n        </p>\\n        <p>oldwesty</p>\\n        <h1>I was wondering if anyone could draw me? I just linked to the album that I save all my pictures in so you have multiple photo choices. Thanks!</h1>\\n        <a>http://imgur.com/a/KjDMi</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/KjDMi\">\\n        </p>\\n        <p>blasejade</p>\\n        <h1>Running out of gift ideas for my boyfriend for Christmas. I\\'d love to give him a framed drawing of us on halloween for his desk</h1>\\n        <a>http://imgur.com/cnE21iX</a>\\n        <p>\\n          <img src=\"http://imgur.com/cnE21iX\">\\n        </p>\\n        <p>jazzillaa</p>\\n        <h1>My little man a few months ago. Would love to see any of the talented artists recreate it.</h1>\\n        <a>http://i.imgur.com/aEDRodb.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/aEDRodb.jpg\">\\n        </p>\\n        <p>nickel45</p>\\n        <h1>Good afternoon, Reddit artists! Here is me waiting at the doctor\\'s office. All creative styles welcome! :)</h1>\\n        <a>http://i.imgur.com/eefMUpb.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/eefMUpb.jpg\">\\n        </p>\\n        <p>Sarahbelle89</p>\\n        <h1>My beautiful daughter.</h1>\\n        <a>http://i.imgur.com/FBE0Ai4.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/FBE0Ai4.jpg\">\\n        </p>\\n        <p>countrockulot</p>\\n        <h1>Please draw my friend with her pet praying mantis!</h1>\\n        <a>http://imgur.com/a/Mu2BT</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/Mu2BT\">\\n        </p>\\n        <p>martythemantis</p>\\n        <h1>Could someone draw my dogs for me? Thanks! :)</h1>\\n        <a>http://imgur.com/VJSevtA</a>\\n        <p>\\n          <img src=\"http://imgur.com/VJSevtA\">\\n        </p>\\n        <p>desertdogs</p>\\n        <h1>Would you draw us? (my husband &amp;amp; me)</h1>\\n        <a>http://imgur.com/a/DJ28E</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/DJ28E\">\\n        </p>\\n        <p>blueharbor</p>\\n        <h1>Hey redditgetsdrawn! Can you please draw me and my dad? Here are some photos to choose from :)</h1>\\n        <a>http://imgur.com/a/AatYX</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/AatYX\">\\n        </p>\\n        <p>Selfsweden</p>\\n        <h1>Can somebody draw my ballerina girlfriend showing off how flexible she is?</h1>\\n        <a>http://imgur.com/McgulWu</a>\\n        <p>\\n          <img src=\"http://imgur.com/McgulWu\">\\n        </p>\\n        <p>late-night-throwaway</p>\\n        <h1>Would someone please be so kind to draw my baby girl? Many thanks in advance as well!</h1>\\n        <a>http://i.imgur.com/xQcRKA1.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/xQcRKA1.jpg\">\\n        </p>\\n        <p>Jersey4ever12</p>\\n        <h1>My girlfriend looking good in her regional dress. It would be great if anyone could draw her in these beautiful colours.</h1>\\n        <a>http://imgur.com/7Beh2zG</a>\\n        <p>\\n          <img src=\"http://imgur.com/7Beh2zG\">\\n        </p>\\n        <p>kesos23</p>\\n        <h1>[Album] I would love a drawing of my friend for her Birthday!</h1>\\n        <a>http://imgur.com/a/urwBg</a>\\n        <p>\\n          <img src=\"http://imgur.com/a/urwBg\">\\n        </p>\\n        <p>tjej</p>\\n        <h1>Pirates ahoy! My stepdaughter with her funny fancy dress waiting for someone to draw her. Thank you!</h1>\\n        <a>http://imgur.com/XjmyCOO</a>\\n        <p>\\n          <img src=\"http://imgur.com/XjmyCOO\">\\n        </p>\\n        <p>sesica</p>\\n        <h1>My kids in disguise</h1>\\n        <a>http://i.imgur.com/i5w3FBm.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/i5w3FBm.jpg\">\\n        </p>\\n        <p>mojoman666</p>\\n        <h1>Would anyone like to draw/paint/render/whatever this pic of me and a mask I made? :)</h1>\\n        <a>http://i.imgur.com/55MmnIQ.jpg</a>\\n        <p>\\n          <img src=\"http://i.imgur.com/55MmnIQ.jpg\">\\n        </p>\\n        <p>TheMothFlock</p>\\n        <h1>Anyone want to draw Paula Scholes and I? Thanks!</h1>\\n        <a>http://imgur.com/9HWg1ua</a>\\n        <p>\\n          <img src=\"http://imgur.com/9HWg1ua\">\\n        </p>\\n        <p>SirLaxersBiggestFan</p>\\n        <h1>My little sister (glasses) and her wife on their wedding day. Same-sex marriage was finally legalized in our home state!</h1>\\n        <a>http://imgur.com/khvU7zu</a>\\n        <p>\\n          <img src=\"http://imgur.com/khvU7zu\">\\n        </p>\\n        <p>oatmeal_pie</p>\\n      </ol>\\n    </div>\\n    <div class=\"body\">\\n      <p>RGDRecentReference is open source</p>\\n      <a>http://github.com/wcmckee/wcmckee</a>\\n    </div>\\n  </body>\\n</html>'"
+       ]
+      }
+     ],
+     "prompt_number": 198
     },
     {
      "cell_type": "code",
