--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28054488313db94f484d286a53bcb1d4a65ae209b0addffc0c960f8bafd1771e"
+  "signature": "sha256:0c8ab054ee6db70e76b84258c1fdf9c3e6a90dc92c3a935b430c21de01cc61f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -174,12 +174,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "bodycom = []"
+      "bodycom = []\n",
+      "bodyicv = dict()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 170
+     "prompt_number": 186
     },
     {
      "cell_type": "code",
@@ -190,7 +191,8 @@
       "    print shtz.ups\n",
       "    print shtz.body\n",
       "    print shtz.replies\n",
-      "    bodycom.append(shtz.body)"
+      "    bodycom.append(shtz.body)\n",
+      "    bodyic"
      ],
      "language": "python",
      "metadata": {},
@@ -206,130 +208,21 @@
         "Subtext: Your post was okay. Mine is better. My post is better than yours. I am now going to call your post out specifically, in front of everyone, as being \"less than.\"\n",
         "\n",
         "Please just change the title, like I asked. Thank you.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Posting, deleting, and reposting would normally earn you a ban from me:\n",
-        "\n",
-        "http://www.reddit.com/r/redditgetsdrawn/comments/2nwr0e/in_the_spirit_of_christmas_hoping_i_can_get_some/\n",
-        "\n",
-        "However, I'm trying to get my ban number down this month, so consider this a warning to read and follow our rules. ;) Aaaaand your post was removed.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Hee hee, poooor wembly! :D\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "No need, if I wanted them gone, I would have removed them. Just letting you know for future reference.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Ugh. Thank you.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "You broke our frequent posting rule:\n",
-        "\n",
-        "http://www.reddit.com/r/redditgetsdrawn/comments/2nzd0u/id_love_to_get_a_drawing_of_one_of_my_favourite/\n",
-        "\n",
-        "Post removed.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Post removed. The only pets you can post are your own. Please read our rules.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Please repost without the \"I see your.....and raise you.....\"\n",
-        "\n",
-        "No need to insult the other submitter. Just make it clear in your next title that this is your uncle. Thanks.\n",
-        "[<praw.objects.Comment object at 0x1f93230>]\n",
-        "0\n",
-        "1\n",
-        "Thank you! :)\n",
-        "[]\n",
-        "0\n",
-        "2\n",
-        "Your comment was removed for breaking our rule about appearance. As that is your second warning, I would give our rules page a good long read before participating further:\n",
-        "\n",
-        "www.reddit.com/r/redditgetsdrawn/wiki\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Images that are filtered or manipulated are removed. Like yours.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Nice job, good for you :)\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "This has been reported as a repost. If it is, I'll be back and your post will be removed.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Your comment was removed. Please read the rules of the sub before participating.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Post removed. You can use RGD art to decorate your credit card.\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "You have artists to thank. O_O\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Welcome to the sub! :)\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Wonderful job! However, per our rules, please do not comment on appearance. Thank you!\n",
-        "[<praw.objects.Comment object at 0x1339050>]\n",
-        "0\n",
-        "1\n",
-        "You have artists to thank. O_O\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Holy moly :D\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "This subreddit is indeed okay with pixel work. :)\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "[No.](http://i.imgur.com/RyPJujS.gif)\n",
-        "\n",
-        "Please let me know if you'd like me to turn your comment removal into a ban.\n",
-        "[]\n",
-        "0\n",
-        "2\n",
-        "You post photos of this person a lot - at least five different times. She's received lots of art before:\n",
-        "\n",
-        "http://www.reddit.com/r/redditgetsdrawn/comments/22yh2o/id_love_to_see_an_artistic_interpretation_of_an/\n",
-        "\n",
-        "and more recently here:\n",
-        "\n",
-        "http://www.reddit.com/r/redditgetsdrawn/comments/2nc72u/im_putting_together_an_album_of_drawn_pictures/\n",
-        "\n",
-        "It's not against the rules, but I do think it's strange that you're submitting this person over and over to RGD, even after receiving art for her.\n",
-        "\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Yay, good to see you!\n",
-        "[]\n",
-        "0\n",
-        "1\n",
-        "Goodness!\n",
         "[]\n"
+       ]
+      },
+      {
+       "ename": "NameError",
+       "evalue": "name 'bodyic' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-187-edc0ef983db3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mshtz\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplies\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mbodycom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshtz\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbody\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mbodyic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'bodyic' is not defined"
        ]
       }
      ],
-     "prompt_number": 171
+     "prompt_number": 187
     },
     {
      "cell_type": "code",
@@ -343,37 +236,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 172,
+       "prompt_number": 188,
        "text": [
-        "[u'I\\'m aware of its use on Reddit. I always find it to be insulting.\\n\\nSubtext: Your post was okay. Mine is better. My post is better than yours. I am now going to call your post out specifically, in front of everyone, as being \"less than.\"\\n\\nPlease just change the title, like I asked. Thank you.',\n",
-        " u\"Posting, deleting, and reposting would normally earn you a ban from me:\\n\\nhttp://www.reddit.com/r/redditgetsdrawn/comments/2nwr0e/in_the_spirit_of_christmas_hoping_i_can_get_some/\\n\\nHowever, I'm trying to get my ban number down this month, so consider this a warning to read and follow our rules. ;) Aaaaand your post was removed.\",\n",
-        " u'Hee hee, poooor wembly! :D',\n",
-        " u'No need, if I wanted them gone, I would have removed them. Just letting you know for future reference.',\n",
-        " u'Ugh. Thank you.',\n",
-        " u'You broke our frequent posting rule:\\n\\nhttp://www.reddit.com/r/redditgetsdrawn/comments/2nzd0u/id_love_to_get_a_drawing_of_one_of_my_favourite/\\n\\nPost removed.',\n",
-        " u'Post removed. The only pets you can post are your own. Please read our rules.',\n",
-        " u'Please repost without the \"I see your.....and raise you.....\"\\n\\nNo need to insult the other submitter. Just make it clear in your next title that this is your uncle. Thanks.',\n",
-        " u'Thank you! :)',\n",
-        " u'Your comment was removed for breaking our rule about appearance. As that is your second warning, I would give our rules page a good long read before participating further:\\n\\nwww.reddit.com/r/redditgetsdrawn/wiki',\n",
-        " u'Images that are filtered or manipulated are removed. Like yours.',\n",
-        " u'Nice job, good for you :)',\n",
-        " u\"This has been reported as a repost. If it is, I'll be back and your post will be removed.\",\n",
-        " u'Your comment was removed. Please read the rules of the sub before participating.',\n",
-        " u'Post removed. You can use RGD art to decorate your credit card.',\n",
-        " u'You have artists to thank. O_O',\n",
-        " u'Welcome to the sub! :)',\n",
-        " u'Wonderful job! However, per our rules, please do not comment on appearance. Thank you!',\n",
-        " u'You have artists to thank. O_O',\n",
-        " u'Holy moly :D',\n",
-        " u'This subreddit is indeed okay with pixel work. :)',\n",
-        " u\"[No.](http://i.imgur.com/RyPJujS.gif)\\n\\nPlease let me know if you'd like me to turn your comment removal into a ban.\",\n",
-        " u\"You post photos of this person a lot - at least five different times. She's received lots of art before:\\n\\nhttp://www.reddit.com/r/redditgetsdrawn/comments/22yh2o/id_love_to_see_an_artistic_interpretation_of_an/\\n\\nand more recently here:\\n\\nhttp://www.reddit.com/r/redditgetsdrawn/comments/2nc72u/im_putting_together_an_album_of_drawn_pictures/\\n\\nIt's not against the rules, but I do think it's strange that you're submitting this person over and over to RGD, even after receiving art for her.\\n\",\n",
-        " u'Yay, good to see you!',\n",
-        " u'Goodness!']"
+        "[u'I\\'m aware of its use on Reddit. I always find it to be insulting.\\n\\nSubtext: Your post was okay. Mine is better. My post is better than yours. I am now going to call your post out specifically, in front of everyone, as being \"less than.\"\\n\\nPlease just change the title, like I asked. Thank you.']"
        ]
       }
      ],
-     "prompt_number": 172
+     "prompt_number": 188
     },
     {
      "cell_type": "code",
@@ -384,7 +253,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 160
+     "prompt_number": 189
     },
     {
      "cell_type": "code",
@@ -395,7 +264,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 161
+     "prompt_number": 190
     },
     {
      "cell_type": "code",
@@ -406,7 +275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 162
+     "prompt_number": 191
     },
     {
      "cell_type": "code",
@@ -419,7 +288,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 163
+     "prompt_number": 192
     },
     {
      "cell_type": "code",
@@ -430,7 +299,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 193
     },
     {
      "cell_type": "code",
@@ -508,7 +377,7 @@
         "http://imgur.com/zkAWMic\n",
         "Me with some lovely flowers\n",
         "leannimals\n",
-        "[]"
+        "[<praw.objects.Comment object at 0x203f490>, <praw.objects.Comment object at 0x1f93cb0>]"
        ]
       },
       {
@@ -530,7 +399,7 @@
         "http://i.imgur.com/occiAsF.jpg?1\n",
         "Would love someone to draw my dog.\n",
         "asm1th\n",
-        "[<praw.objects.Comment object at 0x21268b0>]"
+        "[<praw.objects.Comment object at 0x201e3d0>]"
        ]
       },
       {
@@ -541,7 +410,7 @@
         "http://imgur.com/hWHlxKS\n",
         "Me being a desert fox in the Mojave!\n",
         "arianathefox\n",
-        "[<praw.objects.Comment object at 0x202f130>]"
+        "[<praw.objects.Comment object at 0x203fcf0>]"
        ]
       },
       {
@@ -552,7 +421,7 @@
         "http://imgur.com/a/g8Nx6\n",
         "I got a new haircut - would anyone like to draw me with it?\n",
         "MrsBoris\n",
-        "[<praw.objects.Comment object at 0x1fa1eb0>, <praw.objects.Comment object at 0x1e53c30>]"
+        "[<praw.objects.Comment object at 0x2238250>, <praw.objects.Comment object at 0x201e430>]"
        ]
       },
       {
@@ -684,7 +553,7 @@
         "http://imgur.com/a/KjDMi\n",
         "I was wondering if anyone could draw me? I just linked to the album that I save all my pictures in so you have multiple photo choices. Thanks!\n",
         "blasejade\n",
-        "[<praw.objects.Comment object at 0x2123750>, <praw.objects.Comment object at 0x1fa1df0>, <praw.objects.Comment object at 0x1fa1330>]"
+        "[<praw.objects.Comment object at 0x1fce6b0>, <praw.objects.Comment object at 0x1e53a70>, <praw.objects.Comment object at 0x1fceb70>]"
        ]
       },
       {
@@ -695,7 +564,7 @@
         "http://imgur.com/cnE21iX\n",
         "Running out of gift ideas for my boyfriend for Christmas. I'd love to give him a framed drawing of us on halloween for his desk\n",
         "jazzillaa\n",
-        "[<praw.objects.Comment object at 0x1feb090>]"
+        "[<praw.objects.Comment object at 0x2015350>]"
        ]
       },
       {
@@ -717,7 +586,7 @@
         "http://i.imgur.com/eefMUpb.jpg\n",
         "Good afternoon, Reddit artists! Here is me waiting at the doctor's office. All creative styles welcome! :)\n",
         "Sarahbelle89\n",
-        "[<praw.objects.Comment object at 0x203f050>, <praw.objects.Comment object at 0x1fa1410>]"
+        "[<praw.objects.Comment object at 0x1fce750>, <praw.objects.Comment object at 0x202f490>]"
        ]
       },
       {
@@ -728,7 +597,7 @@
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 194
     },
     {
      "cell_type": "code",
@@ -740,7 +609,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 166
+     "prompt_number": 195
     },
     {
      "cell_type": "code",
@@ -757,12 +626,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-167-5adf893c95df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpanz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-196-5adf893c95df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpanz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
        ]
       }
      ],
-     "prompt_number": 167
+     "prompt_number": 196
     },
     {
      "cell_type": "code",
