conv to emp dict

--- a/wain.ipynb
+++ b/wain.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8f349eb42bb2591ef1548f3c9937d9003dab7718c9ff0336ec2be533faebca82"
+  "signature": "sha256:bf757347367c643aee3c51768e086a51ceba5a1c69a5cf37614ad9a0735be935"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -515,7 +515,7 @@
        "output_type": "pyout",
        "prompt_number": 9,
        "text": [
-        "'N\\xd0\\x83\\xdc\\\\\\x08\\xbb:H\\xb3\\x1bQ\\x9e6\\xbb\\xc8'"
+        "'\\x8d\\xb8[G\\xa0))\\xf5\\xf3\\xbdS8\\x91\\x9by\\xe5'"
        ]
       }
      ],
@@ -535,7 +535,7 @@
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "'03:52:14'"
+        "'08:30:04'"
        ]
       }
      ],
@@ -632,7 +632,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Reason: portrait drawings\n"
+        "Reason: esw\n"
        ]
       },
       {
@@ -640,7 +640,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Comments: testing 123\n"
+        "Comments: checking this on the bus\n"
        ]
       }
      ],
@@ -661,7 +661,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "betdict = {'first-name': firnam}\n"
+      "betdict = dict()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -713,12 +713,11 @@
        "output_type": "pyout",
        "prompt_number": 18,
        "text": [
-        "{'first-name': 'william',\n",
-        " 'last-name': 'mckee',\n",
-        " 'reason': 'portrait drawings',\n",
-        " 'signin-comment': 'testing 123',\n",
-        " 'signin-date': '15-Nov-2014',\n",
-        " 'signin-hrmin': '03:52:53'}"
+        "{'last-name': 'mckee',\n",
+        " 'reason': 'esw',\n",
+        " 'signin-comment': 'checking this on the bus',\n",
+        " 'signin-date': '09-Dec-2014',\n",
+        " 'signin-hrmin': '08:30:54'}"
        ]
       }
      ],
@@ -735,17 +734,15 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'betdict' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-5-eb88bc8862df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbetjsn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbetdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbetjsn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'betdict' is not defined"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "'{\"signin-date\": \"09-Dec-2014\", \"reason\": \"esw\", \"signin-comment\": \"checking this on the bus\", \"last-name\": \"mckee\", \"signin-hrmin\": \"08:30:54\"}'"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -756,7 +753,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -768,7 +766,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -782,13 +780,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 22,
        "text": [
-        "'{\"signin hrmin\": \"10:54:23\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"omg hi\", \"lastname\": \"Mckee\", \"signin date\": \"27-Nov-2014\"}'"
+        "'{\"signin hrmin\": \"15:09:51\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"sunny and mum is back\", \"lastname\": \"Mckee\", \"signin date\": \"02-Dec-2014\"}'"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -815,7 +813,7 @@
        "output_type": "pyout",
        "prompt_number": 24,
        "text": [
-        "'\"{\\\\\"signin hrmin\\\\\": \\\\\"10:27:53\\\\\", \\\\\"reason\\\\\": \\\\\"ESW\\\\\", \\\\\"firstname\\\\\": \\\\\"William\\\\\", \\\\\"signin comment\\\\\": \\\\\"my cough is still bad\\\\\", \\\\\"lastname\\\\\": \\\\\"Mckee\\\\\", \\\\\"signin date\\\\\": \\\\\"13-Nov-2014\\\\\"}\"'"
+        "'\"{\\\\\"signin hrmin\\\\\": \\\\\"15:09:51\\\\\", \\\\\"reason\\\\\": \\\\\"ESW\\\\\", \\\\\"firstname\\\\\": \\\\\"William\\\\\", \\\\\"signin comment\\\\\": \\\\\"sunny and mum is back\\\\\", \\\\\"lastname\\\\\": \\\\\"Mckee\\\\\", \\\\\"signin date\\\\\": \\\\\"02-Dec-2014\\\\\"}\"'"
        ]
       }
      ],
@@ -970,7 +968,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -987,13 +985,13 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mPandasError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-12-edd34ba65abc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m/usr/lib/pymodules/python2.7/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    413\u001b[0m                                          copy=copy)\n\u001b[0;32m    414\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 415\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mPandasError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    416\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    417\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-28-edd34ba65abc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m/usr/lib/pymodules/python2.7/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    312\u001b[0m                                          copy=copy)\n\u001b[0;32m    313\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 314\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mPandasError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    315\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    316\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;31mPandasError\u001b[0m: DataFrame constructor not properly called!"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -1004,7 +1002,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -1040,13 +1038,13 @@
         " \n",
         "\"\n",
         "1\n",
+        "5\n",
+        ":\n",
         "0\n",
+        "9\n",
         ":\n",
         "5\n",
-        "4\n",
-        ":\n",
-        "2\n",
-        "3\n",
+        "1\n",
         "\"\n",
         ",\n",
         " \n",
@@ -1098,14 +1096,7 @@
         "n\n",
         "i\n",
         "n\n",
-        " "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        " \n",
         "c\n",
         "o\n",
         "m\n",
@@ -1117,12 +1108,27 @@
         ":\n",
         " \n",
         "\"\n",
-        "o\n",
-        "m\n",
-        "g\n",
+        "s\n",
+        "u\n",
+        "n\n",
+        "n\n",
+        "y\n",
         " \n",
-        "h\n",
+        "a\n",
+        "n\n",
+        "d\n",
+        " \n",
+        "m\n",
+        "u\n",
+        "m\n",
+        " \n",
         "i\n",
+        "s\n",
+        " \n",
+        "b\n",
+        "a\n",
+        "c\n",
+        "k\n",
         "\"\n",
         ",\n",
         " \n",
@@ -1163,12 +1169,12 @@
         ":\n",
         " \n",
         "\"\n",
+        "0\n",
         "2\n",
-        "7\n",
         "-\n",
-        "N\n",
-        "o\n",
-        "v\n",
+        "D\n",
+        "e\n",
+        "c\n",
         "-\n",
         "2\n",
         "0\n",
@@ -1179,7 +1185,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -1193,7 +1199,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 31,
        "text": [
         "['{',\n",
         " '\"',\n",
@@ -1214,13 +1220,13 @@
         " ' ',\n",
         " '\"',\n",
         " '1',\n",
+        " '5',\n",
+        " ':',\n",
         " '0',\n",
+        " '9',\n",
         " ':',\n",
         " '5',\n",
-        " '4',\n",
-        " ':',\n",
-        " '2',\n",
-        " '3',\n",
+        " '1',\n",
         " '\"',\n",
         " ',',\n",
         " ' ',\n",
@@ -1284,12 +1290,27 @@
         " ':',\n",
         " ' ',\n",
         " '\"',\n",
-        " 'o',\n",
-        " 'm',\n",
-        " 'g',\n",
+        " 's',\n",
+        " 'u',\n",
+        " 'n',\n",
+        " 'n',\n",
+        " 'y',\n",
         " ' ',\n",
-        " 'h',\n",
+        " 'a',\n",
+        " 'n',\n",
+        " 'd',\n",
+        " ' ',\n",
+        " 'm',\n",
+        " 'u',\n",
+        " 'm',\n",
+        " ' ',\n",
         " 'i',\n",
+        " 's',\n",
+        " ' ',\n",
+        " 'b',\n",
+        " 'a',\n",
+        " 'c',\n",
+        " 'k',\n",
         " '\"',\n",
         " ',',\n",
         " ' ',\n",
@@ -1330,12 +1351,12 @@
         " ':',\n",
         " ' ',\n",
         " '\"',\n",
+        " '0',\n",
         " '2',\n",
-        " '7',\n",
         " '-',\n",
-        " 'N',\n",
-        " 'o',\n",
-        " 'v',\n",
+        " 'D',\n",
+        " 'e',\n",
+        " 'c',\n",
         " '-',\n",
         " '2',\n",
         " '0',\n",
@@ -1346,7 +1367,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -1360,13 +1381,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 32,
        "text": [
-        "148"
+        "163"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -1374,19 +1395,17 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "TypeError",
-       "evalue": "count() takes exactly one argument (0 given)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-21-a1553bfa0c34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrezda\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mTypeError\u001b[0m: count() takes exactly one argument (0 given)"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": [],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
