--- a/pygitx.ipynb
+++ b/pygitx.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4c5393eaf5c667364ac158f9572282526fc7be6108da81dbac237e44b82cbc66"
+  "signature": "sha256:cf7a707a1fa9e3900efcd45239c2d256d044877c4ccb7c5134fa4dfa268755be"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,8 +25,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "No module named github",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-04bd0daea4a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgithub\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mGithub\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mImportError\u001b[0m: No module named github"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
