--- a/wcpanda.ipynb
+++ b/wcpanda.ipynb
@@ -15,7 +15,7 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "import math\n",
-      "import usb\n",
+      "#import usb\n",
       "import os\n",
       "import re\n",
       "import subprocess\n",
@@ -25,7 +25,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -54,7 +54,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -68,13 +68,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 4,
        "text": [
-        "-0.8454100486170172"
+        "0.007790083318675075"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -88,13 +88,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 5,
        "text": [
-        "-0.9959159447760363"
+        "0.623384552832203"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -105,7 +105,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -119,13 +119,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 7,
        "text": [
         "array([ 0.])"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -136,7 +136,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -150,7 +150,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 9,
        "text": [
         "array([[ 0,  1,  2,  3,  4],\n",
         "       [ 5,  6,  7,  8,  9],\n",
@@ -158,7 +158,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -169,7 +169,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -180,7 +180,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -194,13 +194,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 12,
        "text": [
-        "\"['ESW', 'omg hi', 'William Mckee', '10:54', '27-Nov-2014']['end of day!', '10:54', '27-Nov-2014']\""
+        "\"['02-Dec-2014', 'ESW', 'William Mckee', '15:09', 'sunny and mum is back']['02-Dec-2014', 'build wire dibo', '17:41']\""
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -218,19 +218,24 @@
        "text": [
         "[\n",
         "'\n",
-        "E\n",
-        "S\n",
-        "W\n",
+        "0\n",
+        "2\n",
+        "-\n",
+        "D\n",
+        "e\n",
+        "c\n",
+        "-\n",
+        "2\n",
+        "0\n",
+        "1\n",
+        "4\n",
         "'\n",
         ",\n",
         " \n",
         "'\n",
-        "o\n",
-        "m\n",
-        "g\n",
-        " \n",
-        "h\n",
-        "i\n",
+        "E\n",
+        "S\n",
+        "W\n",
         "'\n",
         ",\n",
         " \n",
@@ -253,87 +258,129 @@
         " \n",
         "'\n",
         "1\n",
-        "0\n",
-        ":\n",
         "5\n",
-        "4\n",
+        ":\n",
+        "0\n",
+        "9\n",
         "'\n",
         ",\n",
         " \n",
         "'\n",
-        "2\n",
-        "7\n",
-        "-\n",
-        "N\n",
-        "o\n",
-        "v\n",
-        "-\n",
-        "2\n",
-        "0\n",
-        "1\n",
-        "4\n",
+        "s\n",
+        "u\n",
+        "n\n",
+        "n\n",
+        "y\n",
+        " \n",
+        "a\n",
+        "n\n",
+        "d\n",
+        " \n",
+        "m\n",
+        "u\n",
+        "m\n",
+        " \n",
+        "i\n",
+        "s\n",
+        " \n",
+        "b\n",
+        "a\n",
+        "c\n",
+        "k\n",
         "'\n",
         "]\n",
         "[\n",
         "'\n",
-        "e\n",
-        "n\n",
-        "d\n",
-        " \n",
-        "o\n",
-        "f\n",
-        " \n",
-        "d\n",
-        "a\n",
-        "y\n",
-        "!\n",
-        "'\n",
-        ",\n",
-        " \n",
-        "'\n",
-        "1\n",
         "0\n",
-        ":\n",
-        "5\n",
-        "4\n",
-        "'\n",
-        ",\n",
-        " \n",
-        "'\n",
-        "2\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "7\n",
+        "2\n",
         "-\n",
-        "N\n",
-        "o\n",
-        "v\n",
+        "D\n",
+        "e\n",
+        "c\n",
         "-\n",
         "2\n",
         "0\n",
         "1\n",
         "4\n",
+        "'\n",
+        ",\n",
+        " \n",
+        "'\n",
+        "b\n",
+        "u\n",
+        "i\n",
+        "l\n",
+        "d\n",
+        " \n",
+        "w\n",
+        "i\n",
+        "r\n",
+        "e\n",
+        " \n",
+        "d\n",
+        "i\n",
+        "b\n",
+        "o\n",
+        "'\n",
+        ",\n",
+        " \n",
+        "'\n",
+        "1\n",
+        "7\n",
+        ":\n",
+        "4\n",
+        "1\n",
         "'\n",
         "]\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev = usb.core.find()"
+      "#dev = usb.core.find()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'usb' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-14-b3aa8b97e4c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'usb' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pyttsx"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "engine = pyttsx.init()\n",
+      "\n",
+      "engine.say('The quick brown fox jumped over the lazy dog.')\n",
+      "engine.runAndWait()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -343,8 +390,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -354,17 +400,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 15,
-       "text": [
-        "<module 'time' (built-in)>"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -374,8 +410,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -386,16 +421,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<usb.legacy.Bus object at 0x1f5fb30>\n"
-       ]
-      }
-     ],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "code",
