--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:105562dad2842b8e130eb5e8336a86aa343d3bd912f81f6afb0612283f9f0cd7"
+  "signature": "sha256:213fddf9152ce077d4fc6b6d17de38bcf68c75d1248c5f9d16542e5ec71d4c3e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,14 +23,21 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This needs rewriten to remove xl stuff opening. keep it to json and dict. "
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import xlrd\n",
+      "#import xlrd\n",
       "import os\n",
       "import time\n",
-      "from xlutils.copy import copy\n",
-      "from xlrd import *\n",
+      "#from xlutils.copy import copy\n",
+      "#from xlrd import *\n",
       "import dominate\n",
       "import json"
      ],
@@ -43,7 +50,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "wrkbook = xlrd.open_workbook('/home/wcmckee/whai/index.xls')"
+      "#wrkbook = xlrd.open_workbook('/home/wcmckee/whai/index.xls')"
      ],
      "language": "python",
      "metadata": {},
@@ -54,17 +61,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#print wrkbook.sheet_names()\n",
-      "\n",
-      "worksheet = wrkbook.sheet_by_name('visitor sign database')\n",
-      "swlis = []\n",
-      "num_rows = worksheet.nrows - 1\n",
-      "curr_row = -1\n",
-      "while curr_row < num_rows:\n",
-      "    curr_row += 1\n",
-      "    row = worksheet.row(curr_row)\n",
-      "    #print row\n",
-      "    swlis.append(row)"
+      "jsopn = open('/home/wcmckee/visignsys/index.json', 'r')\n",
+      "jsrdv = jsopn.read()"
      ],
      "language": "python",
      "metadata": {},
@@ -75,40 +73,77 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "valis = []"
+      "jsrdv"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "'{\"signin hrmin\": \"15:09:51\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"sunny and mum is back\", \"lastname\": \"Mckee\", \"signin date\": \"02-Dec-2014\"}{\"signin-date\": \"09-Dec-2014\", \"reason\": \"esw\", \"signin-comment\": \"checking this on the bus\", \"last-name\": \"mckee\", \"signin-hrmin\": \"08:30:54\"}'"
+       ]
+      }
+     ],
      "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for swl in swlis[1]:\n",
-      "    print swl.value\n",
-      "    valis.append(swl.value)"
+      "#print wrkbook.sheet_names()\n",
+      "\n",
+      "#worksheet = wrkbook.sheet_by_name('visitor sign database')\n",
+      "#swlis = []\n",
+      "#num_rows = worksheet.nrows - 1\n",
+      "#curr_row = -1\n",
+      "#while curr_row < num_rows:\n",
+      "#    curr_row += 1\n",
+      "#    row = worksheet.row(curr_row)\n",
+      "    #print row\n",
+      "#    swlis.append(row)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#valis = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#for swl in swlis[1]:\n",
+      "#    print swl.value\n",
+      "#    valis.append(swl.value)\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "27-Oct-2014\n",
-        "23:30\n",
-        "1264df86026e9f362e66bcc0b97aa74bdb4277452392f9c3e0b13af9678237a72515ecd3ba88b3975e3933248f7e94913cd7948213df6e89544db8206871c8bdc23fdf27f3e18e08cfeba51213403e642e20a7dd829ee7411191da0bd3d661e8290148eb95fcb8e440269d0c1997006608686ef50d52641d65e4f9be3b3bab0a\n",
-        "William Mckee\n",
-        "ESW\n",
-        "27-Oct-2014\n",
-        "23:30\n",
-        "2d129e75f8d18bb1211c0373e4ca179203ac118a5797f1187fa01aa8df0f317770de7eafc5f350795083b2a2b80502b011baf30c1c8f8ee42b294847e9376d5e923b1f2b6eee7656e7520ffba8ebe95b7b911516677658b04544ebc45cde1c6ca3514a28893a1318569d916066a2f9fc6cc7d7aefc7dfea0dfdbd26c8bd340db\n"
+       "ename": "NameError",
+       "evalue": "name 'swlis' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-7-4f71789a25a2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mswl\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mswlis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mswl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mvalis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mswl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'swlis' is not defined"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -121,7 +156,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -218,13 +253,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "wha = open('/home/wcmckee/visignsys/index.json', 'a')\n",
       "\n",
-      "w = copy(open_workbook('/home/wcmckee/whai/index.xls'))\n",
-      "w.get_sheet(0).write(1,5, time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\"))\n",
-      "w.get_sheet(0).write(1,6, time.strftime(\"%H:%M\"))\n",
-      "w.get_sheet(0).write(1,7, tiran)\n",
+      "#w = copy(open_workbook('/home/wcmckee/whai/index.xls'))\n",
+      "#w.get_sheet(0).write(1,5, time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\"))\n",
+      "#w.get_sheet(0).write(1,6, time.strftime(\"%H:%M\"))\n",
+      "#w.get_sheet(0).write(1,7, tiran)\n",
       "\n",
-      "w.save('/home/wcmckee/whai/index.xls')"
+      "#w.save('/home/wcmckee/whai/index.xls')"
      ],
      "language": "python",
      "metadata": {},
