--- a/wain.ipynb
+++ b/wain.ipynb
@@ -1,30 +1,13 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bf757347367c643aee3c51768e086a51ceba5a1c69a5cf37614ad9a0735be935"
+  "signature": "sha256:44eaf10e9c12876e5f2269212b0401931880fdb5b1b5f72525e1c86e4651a45a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import os\n",
-      "import time\n",
-      "import dominate\n",
-      "import sys\n",
-      "from dominate.tags import *\n",
-      "import json\n",
-      "import pandas as pd"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
     {
      "cell_type": "markdown",
      "metadata": {},
@@ -361,6 +344,31 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import os\n",
+      "import time\n",
+      "import dominate\n",
+      "import sys\n",
+      "from dominate.tags import *\n",
+      "import json\n",
+      "import pandas as pd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Profile. Profile has data in it that is then used in sign system\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "valname = ('lasnam', 'signin', 'usercom', 'dayr', 'htmn')"
      ],
      "language": "python",
@@ -584,13 +592,25 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lasnam = raw_input('Last Name: ')\n",
-      "firnam = raw_input('First Name: ')\n",
-      "dopz = raw_input('dob: ')\n",
-      "mname = ('William Mckee')\n",
-      "ename = raw_input('Email: ')\n",
-      "signin = raw_input('Reason: ')\n",
-      "usecom = raw_input('Comments: ')\n"
+      "newprof = raw_input('New Profile yes/no: ')\n",
+      "\n",
+      "if 'y' in newprof:\n",
+      "    lasnam = raw_input('Last Name: ')\n",
+      "    firnam = raw_input('First Name: ')\n",
+      "    dopz = raw_input('dob: ')\n",
+      "    mname = ('William Mckee')\n",
+      "    ename = raw_input('Email: ')\n",
+      "    signin = raw_input('Reason: ')\n",
+      "    usecom = raw_input('Comments: ')\n",
+      "    \n",
+      "elif 'n' in newprof:\n",
+      "    lasnam = (\"mckee\")\n",
+      "    firnam = ('First Name: ')\n",
+      "    dopz = ('dob: ')\n",
+      "    mname = ('William Mckee')\n",
+      "    ename = ('Email: ')\n",
+      "    signin = ('Reason: ')\n",
+      "    usecom = ('Comments: ')"
      ],
      "language": "python",
      "metadata": {},
@@ -600,51 +620,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Last Name: mckee\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "First Name: william\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "dob: 04121988\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Email: will@artcontrol.me\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Reason: esw\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Comments: checking this on the bus\n"
+        "New Profile yes/no: n\n"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -691,13 +671,24 @@
       "betdict.update({'last-name': lasnam})\n",
       "betdict.update({'reason': signin})\n",
       "betdict.update({'signin-comment': usecom})\n",
-      "betdict.update({'signin-date': dayr})\n",
-      "betdict.update({'signin-hrmin': hrmn})"
+      "betdict.update({'signin-date': returndate()})\n",
+      "betdict.update({'signin-hrmin': returntime()})"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'time' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-65290ac22b3b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdayr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%d\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"-\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"%b\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"-\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"%Y\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mhrmn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%H:%M:%S\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# <codecell>\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'time' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -974,7 +965,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pd.DataFrame(reser)"
+      "#pd.DataFrame(reser)"
      ],
      "language": "python",
      "metadata": {},
