decode str error

--- a/artcontrolme.ipynb
+++ b/artcontrolme.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:174087143c57fd0bcb6ca6d64e50b0d09884e9e4aad721a1d05427796d9e72db"
+  "signature": "sha256:73e0a2b358d4a003328ef798d7568c22bc4abcd8935b0ee51224245c21943d7e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,12 +36,13 @@
       "import requests\n",
       "from bs4 import BeautifulSoup\n",
       "import os\n",
-      "import json"
+      "import json\n",
+      "import pandas as pd"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -52,7 +53,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -63,7 +64,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
@@ -74,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 46
     },
     {
      "cell_type": "code",
@@ -85,7 +86,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -451,6 +452,7 @@
         "chalk-dino-monster.meta\n",
         "cafrin.wp\n",
         "dzhokar-redditgetsdrawn-portraits.meta\n",
+        "test.txt\n",
         "giants-towers.meta\n",
         "redditgetsdrawn-sunday-night-painting.wp\n",
         "cuban-water.wp\n",
@@ -922,7 +924,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -936,7 +938,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 49,
        "text": [
         "[u'644.meta',\n",
         " u'auckland-pencil-drawings.wp',\n",
@@ -1287,6 +1289,7 @@
         " u'chalk-dino-monster.meta',\n",
         " u'cafrin.wp',\n",
         " u'dzhokar-redditgetsdrawn-portraits.meta',\n",
+        " u'test.txt',\n",
         " u'giants-towers.meta',\n",
         " u'redditgetsdrawn-sunday-night-painting.wp',\n",
         " u'cuban-water.wp',\n",
@@ -1758,7 +1761,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -2187,7 +2190,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
@@ -2200,7 +2203,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -2214,7 +2217,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
@@ -2225,7 +2228,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
@@ -2239,7 +2242,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -2272,7 +2275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
@@ -2286,13 +2289,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 56,
        "text": [
         "{'2011-08-03 05:13:40': 'les-barany-advice'}"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -2306,13 +2309,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 57,
        "text": [
         "[('2011-08-03 05:13:40', 'les-barany-advice')]"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -2323,7 +2326,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
@@ -2334,7 +2337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
@@ -2345,7 +2348,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 60
     },
     {
      "cell_type": "code",
@@ -2356,7 +2359,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 61
     },
     {
      "cell_type": "code",
@@ -2370,7 +2373,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 62,
        "text": [
         "['Les Barany Advice\\n',\n",
         " 'les-barany-advice\\n',\n",
@@ -2381,7 +2384,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
@@ -2392,7 +2395,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
