--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d515eb54b748faaa95912ef91a8bbf5608e00ff16fd1af0c528f3c1f1379a080"
+  "signature": "sha256:89c5f1dbbdd3eef2421c0909525cbda4ff0e3781aa862fdd6d0eff70c5413f3f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -35,7 +35,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -49,13 +49,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 6,
        "text": [
         "'/home/wcmckee/index.xcf'"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -65,12 +65,41 @@
       "    return os.system('scp \"%s\" \"%s:%s\"' % (localfile, remotehost, remotefile) )\n",
       "\n",
       "def refzem(remotehost, remotefolder):\n",
-      "    return os.system('scp \"%s\":\"%s\" ls -R' % (remotehost, remotefolder))"
+      "    return os.system('scp \"%s\":\"%s\" ls -R' % (remotehost, remotefolder))\n",
+      "\n",
+      "def rsyzmpush(localfile, remotehost, remotefile):\n",
+      "    return os.system('rsync -azp \"%s\" \"%s:%s\"' % (localfile, remotehost, remotefile))\n",
+      "\n",
+      "def rsyzmpull(remotehost, remotefile, localfile):\n",
+      "    return os.system('rsync -azp \"%s:%s\": \"%s\"' % (localfile, remotehost, remotefile))\n",
+      "\n",
+      "def rsyzmloc(localfile, dilocfil):\n",
+      "    return os.system('rsync -a \"%s\" \"%s' % (localfile, dilocfil))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rsyzmloc('/home/wcmckee', '/media/removable/USB Drive/')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "512"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
