--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:368af90bf793171f8164a1b186891196450ddfd62753d473ccd8c38d4856d738"
+  "signature": "sha256:06e1e4f0cae901acb84a61376a46785ae1ec98f84b5a8eace56af5cc1ad8b73d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,38 @@
      "source": [
       "<h1>GetsDrawn DotCom</h1>"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
