--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c4589ee4329302de994ed3a637c00d48faf108cb884b2e84167a3c4ee86647d4"
+  "signature": "sha256:c5913ee911cd3c0dc4ae308848642790a54d215ce04edb1c45c1612d3d3adaf9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -430,7 +430,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "s = docre.decode('ascii', 'ignore')"
+      "#s = docre.decode('ascii', 'ignore')"
      ],
      "language": "python",
      "metadata": {},
